# wechat_requests

./: .travis.yml  README.md  contact_manage.py  message_manage.py  pyproject.toml  test_requests.py  util.py
api/: base_api.py  contact_manage.py  work.py
testcase/: test_contact_manage.py  test_message_manage.py
utils/: util.py
