[tool.poetry]
name = "wechat_requests"
version = "0.1.0"
description = ""
authors = ["wangpei <13052509959@sina.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
coveralls = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
